# mcp-synaptic

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.full  MCP_TOOLS_REFERENCE.md  README.md  TESTING_BEST_PRACTICES.md  TEST_SUITE_AUDIT.md  docker-compose.dev.yaml  docker-compose.dev.yml  docker-compose.prod.yaml  docker-compose.prod.yml  docker-compose.yaml  docker-compose.yml  doclinks.txt  main.py  pyproject.toml
.github/workflows/: container.yml
docker/: README.md  docker-compose.yaml
docker/overrides/: desktop.yaml  laptop.yaml
docker/variants/: dev.yaml  prod.yaml
envs/: redis.env  synaptic.dev.env  synaptic.env  synaptic.env.example  synaptic.prod.env
mcp_synaptic/: __init__.py  cli.py
mcp_synaptic/config/: __init__.py  logging.py  settings.py
mcp_synaptic/core/: __init__.py  exceptions.py  server.py
mcp_synaptic/mcp/: __init__.py  fastmcp_handler.py  handlers.py  memory_tools.py  protocol.py  rag_tools.py  response_models.py
mcp_synaptic/memory/: __init__.py  manager.py  storage.py  types.py
mcp_synaptic/memory/manager/: __init__.py  core.py  operations.py  queries.py
mcp_synaptic/memory/storage/: __init__.py  base.py  redis.py  sqlite.py
mcp_synaptic/models/: __init__.py  base.py  memory.py  rag.py
mcp_synaptic/rag/: __init__.py  database.py  embeddings.py  retrieval.py
mcp_synaptic/rag/database/: __init__.py  core.py  documents.py  search.py  stats.py
mcp_synaptic/rag/embeddings/: __init__.py  api.py  base.py  local.py  manager.py
mcp_synaptic/sse/: __init__.py  client.py  events.py  server.py
mcp_synaptic/utils/: __init__.py  async_utils.py  date_utils.py  validation.py
mcp_synaptic/utils/validation/: __init__.py  common.py  documents.py  memory.py
tests/: __init__.py  conftest.py  test_docker_imports.py  utils.py
tests/integration/: __init__.py  test_memory_integration.py  test_rag_integration.py  test_system_integration.py
tests/integration/mcp/: test_fastmcp_handler.py  test_memory_tools.py
tests/integration/models/: test_memory.py
tests/unit/: __init__.py  test_memory_manager.py  test_memory_models.py
tests/unit/mcp/: test_rag_tools.py
tests/unit/memory/: test_manager.py  test_storage.py  test_storage_package.py
tests/unit/models/: test_memory.py  test_rag.py
tests/unit/rag/: test_database.py  test_database_package.py  test_embeddings.py  test_embeddings_package.py
tests/unit/utils/: test_validation_package.py
